--- a/src/kenzy/web/index.html
+++ b/src/kenzy/web/index.html
@@ -1485,7 +1485,7 @@ $(document).ready(function() {
             </header>
             <content class="main">
                 <div class="about">
-                    <p><a href="http://kenzy.ai">KENZY</a> is a foundation of Python code that enables hardware interactions leveraging Machine Learning to create Artificial Intelligence. Wow, that's a mouthful. Let's try again, KENZY is a set of Python classes and functions that you can use to build your own personal assistant similar to Apple's Siri, Google's Assistant, or Amazon's Alexa. There are libraries for speech recognition, speech synthesis, face and object detection, and even face recognition. So basically KENZY can see you, hear you, and respond to you.</p>
+                    <p><a href="http://kenzy.dev">KENZY</a> is a foundation of Python code that enables hardware interactions leveraging Machine Learning to create Artificial Intelligence. Wow, that's a mouthful. Let's try again, KENZY is a set of Python classes and functions that you can use to build your own personal assistant similar to Apple's Siri, Google's Assistant, or Amazon's Alexa. There are libraries for speech recognition, speech synthesis, face and object detection, and even face recognition. So basically KENZY can see you, hear you, and respond to you.</p>
 
                     <p>KENZY is 100% customizable. Its modular design allows you to create your own skills or integrate new hardware to fit your specific needs. The code is open source and shared with a business-friendly license.</p>
 
@@ -1503,9 +1503,9 @@ $(document).ready(function() {
             <content>
                 <divider></divider>
                 <footer>
-                    KENZY <span class="version">{version}</span> | <a href="https://docs.kenzy.ai">Documentation</a> 
+                    KENZY <span class="version">{version}</span> | <a href="https://docs.kenzy.dev">Documentation</a> 
                     &nbsp;|&nbsp; 
-                    <a href="https://kenzy.ai/blog">Blog</a> 
+                    <a href="https://kenzy.dev/blog">Blog</a> 
                     &nbsp;|&nbsp; 
                     <a href="https://github.com/lnxusr1/kenzy/issues">Issues</a>
                 </footer>
